Fix overlapping wiki product title.

--- a/kitsune/sumo/static/sumo/less/wiki.less
+++ b/kitsune/sumo/static/sumo/less/wiki.less
@@ -1629,7 +1629,6 @@ article {
 
 .wiki-product-title {
   margin-left: 24px;
-  position: relative;
 
   > svg {
     float: left;
